# sd_team_edu

./: .gitignore  README.md
001_first_session/: README.md
003_third_session/: README.md  pyproject.toml
003_third_session/docs/01_pgvector_vector_search/: 01_벡터_검색_개요.md  02_하이브리드_검색_개요.md  03_메타데이터_필터링_기초.md  04_PGVector_개요.md  05_메타데이터_기반_PGVector_활용.md
003_third_session/docs/02_search_strategies/: 01_질문_확장_쿼리_분해.md  02_검색_검증_병합_패턴.md  03_적응형_HyDE_패턴.md
003_third_session/docs/03_rag_postprocessing/: 01_RAG_후처리_개념.md  02_정확도_향상_후처리_기법.md
003_third_session/docs/04_rag_pipeline_design/: 01_파이프라인_아키텍처_개요.md  02_검색_후처리_결합_흐름.md  03_생성_단계_설계.md
003_third_session/src/thirdsession/: __init__.py  main.py
003_third_session/src/thirdsession/api/: __init__.py
003_third_session/src/thirdsession/api/chat/: __init__.py
003_third_session/src/thirdsession/api/rag/: __init__.py
003_third_session/src/thirdsession/core/: __init__.py
003_third_session/src/thirdsession/core/chat/: __init__.py
003_third_session/src/thirdsession/core/common/: __init__.py  app_config.py  llm_client.py
003_third_session/src/thirdsession/core/postprocessing/: __init__.py  cross_encoder_reranker.py  llm_reranker.py  postprocess_pipeline.py
003_third_session/src/thirdsession/core/rag/: __init__.py
003_third_session/src/thirdsession/core/retrieval/: __init__.py  chunker.py  document_model.py  embedding_service.py  filter_expression_builder.py  hybrid_fusion.py  metadata_filter.py  metadata_schema_repository.py  score_normalizer.py  search_service.py  vector_repository.py
(+211 files in other folders)
